--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,18 +1,23 @@
-- clean: ['~']
+common:
+    - clean: []
 
-- link:
-    ~/.aliases: .aliases
-    ~/.bash_profile: .bash_profile
-    ~/.bashrc: .bashrc
-    ~/.gitconfig: .gitconfig
-    ~/.screenrc: .screenrc
-    ~/.vimrc: .vimrc
-    ~/.exports: .exports
-    ~/.functions: .functions
-    ~/.path: .path
-    ~/.tigrc: .tigrc
+    - link:
+        ~/.aliases: .aliases
+        ~/.bash_profile: .bash_profile
+        ~/.bashrc: .bashrc
+        ~/.gitconfig: .gitconfig
+        ~/.screenrc: .screenrc
+        ~/.vimrc: .vimrc
+        ~/.exports: .exports
+        ~/.functions: .functions
+        ~/.path: .path
+        ~/.tigrc: .tigrc
 
-- shell:
-    - [sudo apt-get install -y screen bash-completion dtrx manpages-fr manpages-fr-extra manpages-posix git tig ncdu source-highlight watch wfrench, Installing awesome tools]
-    - [echo 'Europe/Paris' | sudo tee /etc/timezone > /dev/null && sudo dpkg-reconfigure -f noninteractive tzdata, Configuring timezone]
+    - shell:
+        - [sudo apt-get install -y screen bash-completion dtrx manpages-fr manpages-fr-extra manpages-posix git tig ncdu source-highlight watch wfrench, Installing awesome tools]
 
+server:
+    - clean: ['~']
+    - link: {}
+    - shell:
+        - [echo 'Europe/Paris' | sudo tee /etc/timezone > /dev/null && sudo dpkg-reconfigure -f noninteractive tzdata, Configuring timezone]
