--- a/.tigrc
+++ b/.tigrc
@@ -1,3 +1,17 @@
 # Apply the selected stash
 bind stash A !?git stash apply %(stash)
 
+# Views based on /etc/tigrc
+set blame-view	= date:relative author:full file-name:auto id:yes,color line-number:no,interval=5 text
+set grep-view	= file-name:no line-number:yes,interval=1 text
+set main-view	= line-number:no,interval=5 id:no date:relative author:full commit-title:yes,graph,refs,overflow=no
+set refs-view	= date:relative author:full ref commit-title
+set stash-view	= line-number:no,interval=5 id:no date:relative author:full commit-title
+set status-view	= line-number:no,interval=5 status:short file-name
+set tree-view	= line-number:no,interval=5 mode author:full file-size date:default id:no file-name
+set pager-view	= line-number:no,interval=5 text
+set stage-view	= line-number:no,interval=5 text
+set log-view	= line-number:no,interval=5 text
+set blob-view	= line-number:no,interval=5 text
+set diff-view	= line-number:no,interval=5 text:yes,commit-title-overflow=no
+
