--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,11 @@ set-window-option -g mouse-select-pane on
 set-window-option -g mouse-select-window on
 set-window-option -g mouse-resize-pane on
 
+# powerline
+set -g default-terminal "screen-256color"
+run-shell "powerline-daemon -q"
+source "/usr/share/powerline/bindings/tmux/powerline.conf"
+
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
