Change the display time of tmux messages to 4 seconds

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ set -g default-terminal "screen-256color"
 run-shell "powerline-daemon -q"
 source "/usr/share/powerline/bindings/tmux/powerline.conf"
 
+# time used to display message
+set-option -g display-time 4000
+
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
