Fix .tmux.conf to use the correct powerline.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set-window-option -g mouse-resize-pane on
 # powerline
 set -g default-terminal "screen-256color"
 run-shell "powerline-daemon -q"
-source "/usr/share/powerline/bindings/tmux/powerline.conf"
+source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
 
 # time used to display message
 set-option -g display-time 4000
