Migration from powerline to vim-airline + tmuxline + promptline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,12 @@ set-window-option -g mouse-select-window on
 set-window-option -g mouse-resize-pane on
 
 # powerline
-set -g default-terminal "screen-256color"
-run-shell "powerline-daemon -q"
-source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
+#set -g default-terminal "screen-256color"
+#run-shell "powerline-daemon -q"
+#source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
+
+# tmuxline.vim
+source ~/.tmuxline.vim.conf
 
 # time used to display message
 set-option -g display-time 4000
