--- a/.tmuxline.vim.conf
+++ b/.tmuxline.vim.conf
@@ -1,29 +1,29 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on mar., 14 avril 2015
+# on mer., 15 avril 2015
 
-set -g status-bg "colour233"
-set -g message-command-fg "colour247"
-set -g status-justify "left"
+set -g status-bg "colour234"
+set -g message-command-fg "colour231"
+set -g status-justify "centre"
 set -g status-left-length "100"
 set -g status "on"
-set -g pane-active-border-fg "colour148"
-set -g message-bg "colour236"
+set -g pane-active-border-fg "colour254"
+set -g message-bg "colour31"
 set -g status-right-length "100"
 set -g status-right-attr "none"
-set -g message-fg "colour247"
-set -g message-command-bg "colour236"
+set -g message-fg "colour231"
+set -g message-command-bg "colour31"
 set -g status-attr "none"
 set -g status-utf8 "on"
-set -g pane-border-fg "colour236"
+set -g pane-border-fg "colour240"
 set -g status-left-attr "none"
-setw -g window-status-fg "colour231"
+setw -g window-status-fg "colour250"
 setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour233"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour148"
+setw -g window-status-activity-bg "colour234"
+setw -g window-status-activity-attr "underscore"
+setw -g window-status-activity-fg "colour250"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour233"
-set -g status-left "#[fg=colour22,bg=colour148] #S #[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] %Y-%m-%d  %H:%M #[fg=colour148,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour22,bg=colour148] #h "
-setw -g window-status-format "#[fg=colour231,bg=colour233] #I #[fg=colour231,bg=colour233] #W "
-setw -g window-status-current-format "#[fg=colour233,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] #I #[fg=colour247,bg=colour236] #W #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]"
+setw -g window-status-bg "colour234"
+set -g status-left "#[fg=colour16,bg=colour254,bold] #H  #(whoami) #[fg=colour254,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour232,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour236,bg=colour232,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] #(uptime | sed \"s/.*load average: //\") #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour252] %R "
+setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour234,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour231,bg=colour31,bold] #I  #W  #F #[fg=colour31,bg=colour234,nobold,nounderscore,noitalics]"
