--- a/.gitconfig
+++ b/.gitconfig
@@ -29,6 +29,7 @@
     sa = "!sh -c 'git stash apply --index stash@{${1}}' -"
     amend = commit --amend
     l = log --graph --abbrev-commit --pretty=format:'%C(red)%h%C(reset) -%C(auto)%d%C(reset) %s %C(green)(%ad)%C(reset) %C(blue)<%an>%C(reset)' --decorate
+    la = "!sh -c 'git l --all' -"
     # to use after `git reflog'
     rewind = "!sh -c 'git reset --hard HEAD@{${1}}' -"
     restore-file = checkout --
