Changed refresh interval for tmux statusline from 15 to 5

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,9 @@ source ~/.tmuxline.vim.conf
 # time used to display message
 set-option -g display-time 4000
 
+# interval between status bar refresh
+set-option status-interval 5
+
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
