Fix error when new session in .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ source ~/.tmuxline.vim.conf
 set-option -g display-time 4000
 
 # interval between status bar refresh
-set-option status-interval 5
+set-option -g status-interval 5
 
 # remap prefix to Control + a
 set -g prefix C-a
