--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ set-window-option -g mouse-resize-pane on
 #run-shell "powerline-daemon -q"
 #source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
 
+run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+
 # tmuxline.vim
 source ~/.tmuxline.vim.conf
 
