--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,7 +18,10 @@
         ~/.ssh/authorized_keys: authorized_keys
         ~/.ssh/config: ssh_config
 
-- shell: []
 - shell:
+        - [mkdir -p ~/.vim/autoload ~/.vim/bundle && curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim, Installing pathogen.vim]
+        - [git clone https://github.com/bling/vim-airline ~/.vim/bundle/vim-airline, Installing vim-airline]
+        - [git clone https://github.com/edkolev/tmuxline.vim ~/.vim/bundle/tmuxline.vim, Installing tmuxline.vim]
+        - [git clone https://github.com/edkolev/promptline.vim ~/.vim/bundle/promptline.vim, Installing promptline.vim]
         - [git clone https://github.com/tmux-plugins/tmux-resurrect ~/clone/path, Installing tmux-resurrect]
 
