--- a/.gitconfig
+++ b/.gitconfig
@@ -24,7 +24,10 @@
     uns = unstage
     ss = stash save --include-untracked
     sl = stash list
+    # show stash diff for tracked files
     sdif = "!sh -c 'git stash show -p stash@{${1}}' -"
+    # show stash diff for *UN*tracked files
+    sdifu = "!sh -c 'git show -p stash@{${1}}^3' -"
     sdel = "!sh -c 'git stash drop stash@{${1}}' -"
     sa = "!sh -c 'git stash apply --index stash@{${1}}' -"
     amend = commit --amend
