Add nested tmux sessions handling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,9 +24,11 @@ set-option -g display-time 4000
 set-option -g status-interval 5
 
 # remap prefix to Control + a
-set -g prefix C-a
 unbind C-b
-bind C-a send-prefix
+set -g prefix C-a
+
+# map prefix to nested tmux session with Control + z
+bind-key -n C-z send-prefix
 
 # force a reload of the config file inside tmux
 unbind r
