--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,16 @@
 [submodule "dotbot"]
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
+[submodule "vim/bundle/promptline.vim"]
+	path = vim/bundle/promptline.vim
+	url = https://github.com/nagromc/promptline.vim.git
+    branch = slices-git-status-color
+[submodule "vim/bundle/tmuxline.vim"]
+	path = vim/bundle/tmuxline.vim
+	url = https://github.com/edkolev/tmuxline.vim.git
+[submodule "vim/bundle/vim-airline"]
+	path = vim/bundle/vim-airline
+	url = https://github.com/bling/vim-airline.git
+[submodule "vim/bundle/pathogen.vim"]
+	path = vim/bundle/pathogen.vim
+	url = https://github.com/tpope/vim-pathogen.git
