--- a/.gitconfig
+++ b/.gitconfig
@@ -48,6 +48,7 @@
     default = simple
 [core]
     pager = less -F -S -R -X
+    editor = vim
 # local customization
 [include]
     path = ~/.gitconfig_local
