Move files in appropriate directories, and remove leading dot

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,20 +1,23 @@
-- clean: ['~']
+- clean:
+        - '~'
+        - '~/.config/fish'
+        - '~/.ssh'
 
 - link:
-        ~/.aliases: .aliases
-        ~/.config/fish/config.fish: config.fish
-        ~/.exports: .exports
-        ~/.functions: .functions
-        ~/.gitconfig: .gitconfig
-        ~/.path: .path
-        ~/.shell_prompt.sh: .shell_prompt.sh
-        ~/.ssh/authorized_keys: authorized_keys
-        ~/.ssh/config: ssh_config
-        ~/.tigrc: .tigrc
-        ~/.tmux.conf: .tmux.conf
-        ~/.tmuxline.vim.conf: .tmuxline.vim.conf
+        ~/.aliases: fish/aliases
+        ~/.config/fish/config.fish: fish/config.fish
+        ~/.exports: fish/exports
+        ~/.functions: fish/functions
+        ~/.gitconfig: git/gitconfig
+        ~/.path: fish/path
+        ~/.shell_prompt.sh: fish/shell_prompt.sh
+        ~/.ssh/authorized_keys: ssh/authorized_keys
+        ~/.ssh/config: ssh/config
+        ~/.tigrc: tig/tigrc
+        ~/.tmux.conf: tmux/tmux.conf
+        ~/.tmuxline.vim.conf: tmux/tmuxline.vim.conf
         ~/.vim: vim/
-        ~/.vimrc: .vimrc
+        ~/.vimrc: vim/vimrc
 
 - shell:
         - git submodule update --init --recursive
