Add key binding to switch window and pane in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,17 +38,19 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
 unbind ^A
 bind ^A last-window
 
-# next window = Space or Control-Space
+# next window = Space or Control-Space or Alt-Right
 unbind ^Space
 bind ^Space next-window
 unbind Space
 bind Space next-window
+bind -n M-Right next-window
 
-# previous window = Backspace or Control-Backspace
+# previous window = Backspace or Control-Backspace or Alt-Left
 unbind ^BSpace
 bind ^BSpace previous-window
 unbind BSpace
 bind BSpace previous-window
+bind -n M-Left previous-window
 
 # create window = Control-C
 unbind ^c
@@ -59,6 +61,18 @@ unbind ^z
 bind ^z last-pane
 unbind z
 bind z last-pane
+
+# ctrl-alt-arrow keys without prefix key to switch panes
+bind -n C-M-Left select-pane -L
+bind -n C-M-Right select-pane -R
+bind -n C-M-Up select-pane -U
+bind -n C-M-Down select-pane -D
+
+# ctrl-alt-shift-arrow keys without prefix key to switch panes
+bind -n C-M-S-Left resize-pane -L
+bind -n C-M-S-Right resize-pane -R
+bind -n C-M-S-Up resize-pane -U
+bind -n C-M-S-Down resize-pane -D
 
 # split the current pane verticaly = Control-dash
 unbind -
