--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "dotbot"]
     path = dotbot
     url = https://github.com/anishathalye/dotbot
+[submodule "fonts"]
+    path = fonts
+    url = https://github.com/powerline/fonts.git
 [submodule "vim/bundle/promptline.vim"]
     path = vim/bundle/promptline.vim
     url = https://github.com/nagromc/promptline.vim.git
