--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,3 +82,7 @@ bind - split-window -v
 unbind !
 bind ! split-window -h
 
+# tmux-resurrect: Ctrl-s to save session ; Ctrl-r to restore session
+set -g @resurrect-save 'C-S'
+set -g @resurrect-restore 'C-R'
+
