Add favorite-package management for Atom

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -25,4 +25,5 @@
 
 - shell:
     - git submodule update --init --recursive
+    - ["./atom/install-packages.sh", Installing awesome packages for Atom]
 
