--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -45,4 +45,5 @@
     - git submodule update --init --recursive
     - ["mkdir -p ~/opt/ ~/opt/bin/ ~/opt/etc/ ~/opt/include/ ~/opt/lib/ ~/opt/share/", Creating ~/opt folder where you can install extra packages]
     - ["./atom/install-packages.sh", Installing awesome packages for Atom]
+    - ["mjson.js -f -s ~/.config/dotfiles/bower/bowerrc -o ~/.bowerrc", Minifying .bowerrc (mjson.js must be installed with `sudo npm install -g mjson`)]
 
