--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -37,6 +37,7 @@
         path: fish/path
     ~/.config/dotfiles: ''
     ~/.gitconfig: git/gitconfig
+    ~/.gitignore_global: git/gitignore_global
     ~/.minttyrc: mintty/minttyrc
     ~/.npmrc: npm/npmrc
     ~/.config/fish/shell_prompt.sh:
