--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -31,9 +31,7 @@
     ~/.config/fish/config.fish:
         create: true
         path: fish/config.fish
-    ~/.config/fish/functions/functions:
-        create: true
-        path: fish/functions
+    ~/.config/fish/functions: fish/functions/
     ~/.config/fish/exports:
         create: true
         path: fish/exports
