Add ctrlp vim plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,9 @@
 [submodule "tmux/plugins/tmux-resurrect"]
     path = tmux/plugins/tmux-resurrect
     url = https://github.com/tmux-plugins/tmux-resurrect.git
+[submodule "vim/bundle/ctrlp.vim"]
+    path = vim/bundle/ctrlp.vim
+    url = https://github.com/kien/ctrlp.vim.git
 [submodule "vim/bundle/promptline.vim"]
     path = vim/bundle/promptline.vim
     url = https://github.com/nagromc/promptline.vim.git
