--- a/.gitmodules
+++ b/.gitmodules
@@ -22,7 +22,7 @@
     url = https://github.com/bling/vim-airline.git
 [submodule "vim/bundle/vim-gitgutter"]
     path = vim/bundle/vim-gitgutter
-    url = git://github.com/airblade/vim-gitgutter.git
+    url = https://github.com/airblade/vim-gitgutter.git
 [submodule "vim/bundle/vim-sensible"]
     path = vim/bundle/vim-sensible
     url = https://github.com/tpope/vim-sensible.git
