--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
     url = https://github.com/tmux-plugins/tmux-resurrect.git
 [submodule "vim/bundle/ctrlp.vim"]
     path = vim/bundle/ctrlp.vim
-    url = https://github.com/kien/ctrlp.vim.git
+    url = https://github.com/ctrlpvim/ctrlp.vim.git
 [submodule "vim/bundle/promptline.vim"]
     path = vim/bundle/promptline.vim
     url = https://github.com/nagromc/promptline.vim.git
