--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,6 @@
 [submodule "vim/bundle/pathogen.vim"]
     path = vim/bundle/pathogen.vim
     url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim/bundle/nerdcommenter"]
+	path = vim/bundle/nerdcommenter
+	url = https://github.com/scrooloose/nerdcommenter.git
