--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,6 @@
 [submodule "vim/bundle/vim-sensible"]
     path = vim/bundle/vim-sensible
     url = https://github.com/tpope/vim-sensible.git
+[submodule "vim/colors/molokai"]
+    path = vim/colors/molokai
+    url = https://github.com/tomasr/molokai.git
