Add tagbar vim plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,6 +26,9 @@
     path = vim/bundle/promptline.vim
     url = https://github.com/nagromc/promptline.vim.git
     branch = slices-git-status-color
+[submodule "vim/bundle/tagbar"]
+    path = vim/bundle/tagbar
+    url = https://github.com/majutsushi/tagbar.git
 [submodule "vim/bundle/tmuxline.vim"]
     path = vim/bundle/tmuxline.vim
     url = https://github.com/edkolev/tmuxline.vim.git
