--- a/.gitmodules
+++ b/.gitmodules
@@ -35,6 +35,9 @@
 [submodule "vim/bundle/vim-airline"]
     path = vim/bundle/vim-airline
     url = https://github.com/bling/vim-airline.git
+[submodule "vim/bundle/vim-fugitive"]
+    path = vim/bundle/vim-fugitive
+    url = https://github.com/tpope/vim-fugitive.git
 [submodule "vim/bundle/vim-gitgutter"]
     path = vim/bundle/vim-gitgutter
     url = https://github.com/airblade/vim-gitgutter.git
