--- a/.gitmodules
+++ b/.gitmodules
@@ -44,6 +44,9 @@
 [submodule "vim/bundle/vim-sensible"]
     path = vim/bundle/vim-sensible
     url = https://github.com/tpope/vim-sensible.git
+[submodule "vim/bundle/vim-surround"]
+    path = vim/bundle/vim-surround
+    url = git://github.com/tpope/vim-surround.git
 [submodule "vim/colors/molokai"]
     path = vim/colors/molokai
     url = https://github.com/tomasr/molokai.git
