--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,6 +18,9 @@ set-option -g display-time 4000
 # interval between status bar refresh
 set-option -g status-interval 5
 
+# get rid of the ESC delay
+set -sg escape-time 0
+
 # remap prefix to Control + a
 unbind C-b
 set -g prefix C-a
