Add ^e tmux bind

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -54,6 +54,9 @@ bind -n M-Left previous-window
 unbind ^c
 bind ^c new-window
 
+# send exit in current shell
+bind ^e send-keys "exit" Enter
+
 # go to last selected pane = Z or Control-Z
 unbind ^z
 bind ^z last-pane
