--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -83,6 +83,12 @@ bind - split-window -v
 unbind !
 bind ! split-window -h
 
+# using terminal lock
+set-option -g lock-command vlock
+set-option -g lock-after-time 300
+unbind l
+bind l lock-session
+
 # tmux-resurrect: Ctrl-s to save session ; Ctrl-r to restore session
 set -g @resurrect-save 'C-S'
 set -g @resurrect-restore 'C-R'
