Add ~/.tmux_local.conf include

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -93,3 +93,5 @@ bind l lock-session
 set -g @resurrect-save 'C-S'
 set -g @resurrect-restore 'C-R'
 
+# include ~/.tmux_local.conf
+source-file ~/.tmux_local.conf
