Remove default automatic tmux lock session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,9 +85,10 @@ bind ! split-window -h
 
 # using terminal lock
 set-option -g lock-command vlock
-set-option -g lock-after-time 300
 unbind l
 bind l lock-session
+# include the following line in ~/.tmux_local.conf to lock automatically
+# set-option -g lock-after-time 300
 
 # tmux-resurrect: Ctrl-s to save session ; Ctrl-r to restore session
 set -g @resurrect-save 'C-S'
