--- a/.gitmodules
+++ b/.gitmodules
@@ -44,6 +44,9 @@
 [submodule "vim/bundle/vim-commentary"]
     path = vim/bundle/vim-commentary
     url = https://github.com/tpope/vim-commentary
+[submodule "vim/bundle/vim-fish"]
+    path = vim/bundle/vim-fish
+    url = https://github.com/kballard/vim-fish.git
 [submodule "vim/bundle/vim-fugitive"]
     path = vim/bundle/vim-fugitive
     url = https://github.com/tpope/vim-fugitive.git
