Add git-flow completion for fish

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,9 @@
 [submodule "fonts"]
     path = fonts
     url = https://github.com/powerline/fonts.git
+[submodule "git/git-flow-completion"]
+    path = git/git-flow-completion
+    url = https://github.com/petervanderdoes/git-flow-completion.git
 [submodule "mintty/minttyrc.d/solarized"]
     path = mintty/minttyrc.d/solarized
     url = https://github.com/mavnn/mintty-colors-solarized.git
