Better ~/.tmux_local.conf management

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,4 +95,4 @@ set -g @resurrect-save 'C-S'
 set -g @resurrect-restore 'C-R'
 
 # include ~/.tmux_local.conf
-source-file ~/.tmux_local.conf
+if-shell "[ -f ~/.tmux_local.conf  ]" 'source ~/.tmux_local.conf'
