--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,9 @@
 [submodule "vim/bundle/auto-pairs"]
     path = vim/bundle/auto-pairs
     url = https://github.com/jiangmiao/auto-pairs.git
+[submodule "vim/bundle/css.vim"]
+    path = vim/bundle/css.vim
+    url = https://github.com/JulesWang/css.vim
 [submodule "vim/bundle/ctrlp.vim"]
     path = vim/bundle/ctrlp.vim
     url = https://github.com/ctrlpvim/ctrlp.vim.git
@@ -65,6 +68,9 @@
 [submodule "vim/bundle/vim-joy"]
     path = vim/bundle/vim-joy
     url = https://github.com/rking/vim-joy
+[submodule "vim/bundle/vim-less"]
+    path = vim/bundle/vim-less
+    url = https://github.com/genoma/vim-less
 [submodule "vim/bundle/vim-sensible"]
     path = vim/bundle/vim-sensible
     url = https://github.com/tpope/vim-sensible.git
