Add latest language definitions for highlight

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
 [submodule "mintty/minttyrc.d/solarized"]
     path = mintty/minttyrc.d/solarized
     url = https://github.com/mavnn/mintty-colors-solarized.git
+[submodule "syntaxhighlight"]
+    path = syntaxhighlight
+    url = https://github.com/nagromc/syntaxhighlight.git
 [submodule "tmux/plugins/tmux-resurrect"]
     path = tmux/plugins/tmux-resurrect
     url = https://github.com/tmux-plugins/tmux-resurrect.git
