Add Vim configuration for Rust

--- a/.gitmodules
+++ b/.gitmodules
@@ -44,6 +44,9 @@
     path = vim/bundle/promptline.vim
     url = https://github.com/nagromc/promptline.vim.git
     branch = slices-git-status-color
+[submodule "vim/bundle/rust.vim"]
+    path = vim/bundle/rust.vim
+    url = https://github.com/rust-lang/rust.vim.git
 [submodule "vim/bundle/syntastic"]
     path = vim/bundle/syntastic
     url = https://github.com/scrooloose/syntastic.git
