Add option to automatically renumber windows in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,9 @@ run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 # tmuxline.vim
 source ~/.tmuxline.vim.conf
 
+# automatic windows renumbering if a window is closed
+set-option -g renumber-windows on
+
 # time used to display message
 set-option -g display-time 4000
 
